Set double and single guillemets to use system fonts.

--- a/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
@@ -821,8 +821,10 @@ div.kmw-key.kmw-key-default[id='popup-default-U_003A'] span.kmw-key-text,
 div.kmw-key.kmw-key-default[id='popup-default-U_002C'] span.kmw-key-text,
 div.kmw-key.kmw-key-default[id='popup-default-U_002E'] span.kmw-key-text,
 div.kmw-key.kmw-key-default[id='popup-default-K_SLASH'] span.kmw-key-text,
-div.kmw-key.kmw-key-default[id='popup-default-U_00AB'] span.kmw-key-text,
-div.kmw-key.kmw-key-default[id='popup-default-U_00BB'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='U_00AB'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='U_00BB'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='U_2039'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='U_203A'] span.kmw-key-text,
 div.kmw-key-popup-icon.kmw-key-text
 {font-family: system-ui, -apple-system, 'San Francisco', 'Segoe UI', Arial; }
 
